--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,3 +16,5 @@ jobs:
           architecture: x64
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots verify
+      - name: run tests
+        run: mvn --batch-mode test
