--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.purexyz</groupId>
-  <artifactId>project-template</artifactId>
+  <artifactId>maven-java-project-template</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <name>project-template</name>
