--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: Java CI
+name: tests
 
 on: [push]
 
@@ -23,5 +23,5 @@ jobs:
             ${{ runner.os }}-maven-
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots verify
-      - name: run tests
+      - name: Run tests
         run: mvn --batch-mode test
