--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,5 +23,7 @@ jobs:
             ${{ runner.os }}-maven-
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots verify
+      - name: Run style check
+        run: mvn --batch-mode checkstyle:check
       - name: Run tests
         run: mvn --batch-mode test
