--- a/.github/workflows/maven-tests.yml
+++ b/.github/workflows/maven-tests.yml
@@ -1,4 +1,4 @@
-name: tests
+name: Tests
 
 on: [push]
 
@@ -23,7 +23,5 @@ jobs:
             ${{ runner.os }}-maven-
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots verify
-      - name: Run style check
-        run: mvn --batch-mode checkstyle:check
       - name: Run tests
         run: mvn --batch-mode test
