--- a/.github/workflows/maven-tests.yml
+++ b/.github/workflows/maven-tests.yml
@@ -22,4 +22,4 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
       - name: Run Tests
-        run: mvn --batch-mode --update-snapshots -Dmaven.test.failure.ignore=true test
+        run: mvn --batch-mode --update-snapshots -Dcheckstyle.skip test
